--- a/TravelRecordApp/TravelRecordApp/App.xaml
+++ b/TravelRecordApp/TravelRecordApp/App.xaml
@@ -5,6 +5,15 @@
 	<Application.Resources>
 
 		<!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <Color x:Key="blueColor">#1E90FF</Color>
+            <Color x:Key="whiteColor">#FFFFFF</Color>
 
-	</Application.Resources>
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource blueColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource whiteColor}"/>
+            </Style>
+        </ResourceDictionary>
+        
+    </Application.Resources>
 </Application>
