Optimize source code using MVVM and INotify

--- a/TravelRecordApp/TravelRecordApp/RegisterPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/RegisterPage.xaml
@@ -2,17 +2,18 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecordApp.RegisterPage">
-    <StackLayout VerticalOptions="Center"
+    <StackLayout x:Name="containerStackLayout" 
+                 VerticalOptions="Center"
                  Margin="20">
         <Entry x:Name="emailEntry"
                Placeholder="Email address"
                TextColor="{StaticResource blueColor}"
-               Text="Test"
+               Text="{Binding Email, Mode=TwoWay}"
                Keyboard="Email"/>
         <Entry x:Name="passwordEntry"
                Placeholder="Password"
                TextColor="{StaticResource blueColor}"
-               Text="Test"
+               Text="{Binding Password, Mode=TwoWay}"
                IsPassword="True"/>
         <Entry x:Name="confirmpasswordEntry"
                Placeholder="Confirm Password"
