--- a/TravelRecordApp/TravelRecordApp/NewTravelPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/NewTravelPage.xaml
@@ -9,8 +9,9 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout x:Name="containerStackLayout">
             <Entry x:Name="experienceEntry"
+                   Text="{Binding Experience, Mode=TwoWay}"
                    Placeholder="Write your experience"/>
             <ListView x:Name="venueListView"
                       Margin="20, 0"
