--- a/TravelRecordApp/TravelRecordApp/NewTravelPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/NewTravelPage.xaml
@@ -5,15 +5,20 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Save"
                      Icon="save.png"
-                     Clicked="ToolbarItem_Clicked"/>
+                     Command="{Binding PostCommand}"
+                     CommandParameter="{Binding Post}"
+                     />
+        <!--Clicked="ToolbarItem_Clicked"-->
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <StackLayout x:Name="containerStackLayout">
+            <!--BindingContext="{Binding Post}"-->
             <Entry x:Name="experienceEntry"
                    Text="{Binding Experience, Mode=TwoWay}"
                    Placeholder="Write your experience"/>
             <ListView x:Name="venueListView"
+                      SelectedItem="{Binding Venue, Mode= TwoWay}"
                       Margin="20, 0"
                       HorizontalOptions="FillAndExpand">
                 <ListView.ItemTemplate>
@@ -28,7 +33,7 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
-                                
+
                                 <Label Text="{Binding name}"
                                        FontAttributes="Bold"/>
                                 <Label Grid.Row="1"
