IValueConverter and DateTimeToStringConverter

--- a/TravelRecordApp/TravelRecordApp/HistoryPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/HistoryPage.xaml
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TravelRecordApp.HistoryPage">
+             x:Class="TravelRecordApp.HistoryPage"
+             xmlns:converters="clr-namespace:TravelRecordApp.ViewModel.Converters">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:DateTimeToStringConverter x:Key="converter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ListView x:Name="postListView">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextCell Text="{Binding Experience}"/>
+                <TextCell Text="{Binding Experience}"
+                          Detail="{Binding CREATEDAT, Converter={StaticResource converter}}"/>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
